# flydocs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  Taskfile.yml  alembic.ini  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  env_template  pyfly.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker-publish.yaml  pr-gate.yaml  publish-sdks.yaml
docs/: README.md  api-reference.md  architecture.md  cicd.md  concurrency.md  deployment.md  docling.md  migration-v0-to-v1.md  overview.md  payload-reference.md  pipeline.md  prompts.md  rule-engine.md  standard-validators.md  transformations.md  troubleshooting.md  validators.md
docs/audits/: 2026-05-14-pyfly-eda-probes-tracing.md
docs/superpowers/plans/: 2026-05-26-api-contract-v1-redesign.md  baseline-snapshot.txt  post-redesign-snapshot.txt  post-server-snapshot.txt
docs/superpowers/specs/: 2026-05-26-api-contract-v1-redesign-design.md
migrations/: env.py
migrations/versions/: 20260514_0001_init.py  20260515_0002_bbox_refine_columns.py  20260515_0003_widen_job_status.py  20260526_0004_extraction_v1_rename.py
scripts/: kyb_real_test.py  precommit_no_anthropic_keys.sh  smoke_async_postgres_eda.sh  smoke_bbox_real.py
sdks/: README.md
sdks/java/: LICENSE  QUICKSTART.md  README.md  TUTORIAL.md  pom.xml
sdks/java/flydocs-examples/: README.md  pom.xml
sdks/java/flydocs-sdk/: pom.xml
sdks/java/flydocs-spring-boot-starter/: pom.xml
sdks/python/: LICENSE  QUICKSTART.md  README.md  TUTORIAL.md  pyproject.toml
sdks/python/examples/: 01_first_extraction.py  02_typed_schema_and_rules.py  03_async_extraction_with_wait.py  03_async_job_with_wait.py  04_webhook_receiver_fastapi.py  05_error_handling.py  06_sync_facade.py  README.md  examples_helpers.py
sdks/python/src/flydocs_sdk/: __init__.py  _transport.py  _version.py  async_client.py  client.py  errors.py  models.py  request.py  webhooks.py
sdks/python/tests/: __init__.py  conftest.py  test_async_client.py  test_client_async.py  test_client_sync.py  test_imports.py  test_models.py  test_request_models.py  test_sync_client.py  test_wait_for_completion.py  test_webhooks.py
src/flydesk_idp/: __init__.py  app.py  cli.py  config.py  main.py
src/flydesk_idp/core/: __init__.py  configuration.py
src/flydesk_idp/core/observability/: __init__.py  agent_middleware.py  correlation.py  outbound_log.py  pricing.py
src/flydesk_idp/core/services/: __init__.py
src/flydesk_idp/interfaces/: __init__.py
src/flydesk_idp/interfaces/dtos/: __init__.py  authenticity.py  bbox.py  doc.py  error.py  event.py  extract.py  field.py  job.py  rule.py  standard_validator.py  transformation.py  webhook.py
src/flydesk_idp/interfaces/enums/: __init__.py  job_status.py  standard_validator.py
src/flydesk_idp/models/: __init__.py
src/flydesk_idp/models/entities/: __init__.py  extraction_job.py
src/flydesk_idp/models/repositories/: __init__.py  extraction_job_repository.py
src/flydesk_idp/resources/: __init__.py
src/flydesk_idp/resources/prompts/: __init__.py  bbox_matcher.yaml  classifier.yaml  content_authenticity.yaml  extract.yaml  extract_retry_arrays.yaml  judge.yaml  rule_engine.yaml  splitter.yaml  transform.yaml  visual_authenticity.yaml
src/flydesk_idp/web/: correlation_filter.py  openapi_override.py
src/flydesk_idp/web/advice/: __init__.py  exception_advice.py
src/flydesk_idp/web/controllers/: __init__.py  extract_controller.py  jobs_controller.py  version_controller.py
src/flydocs/: __init__.py  app.py  cli.py  config.py  main.py  worker_health.py
src/flydocs/core/: __init__.py  configuration.py
src/flydocs/core/observability/: __init__.py  agent_middleware.py  outbound_log.py
src/flydocs/core/services/: __init__.py
src/flydocs/interfaces/: __init__.py
src/flydocs/interfaces/dtos/: __init__.py  authenticity.py  bbox.py  doc.py  document_type.py  error.py  event.py  extract.py  extraction.py  field.py  job.py  rule.py  standard_validator.py  transformation.py  validator.py  webhook.py
src/flydocs/interfaces/enums/: __init__.py  extraction_status.py  field_type.py  standard_validator.py  status.py  validator.py
src/flydocs/models/: __init__.py
src/flydocs/models/entities/: __init__.py  extraction.py  extraction_job.py
src/flydocs/models/repositories/: __init__.py  extraction_job_repository.py  extraction_repository.py
src/flydocs/resources/: __init__.py
src/flydocs/resources/prompts/: __init__.py  bbox_matcher.yaml  classifier.yaml  content_authenticity.yaml  extract.yaml  extract_retry_arrays.yaml  (+5 more)
src/flydocs/web/: __init__.py  openapi_override.py
tests/: conftest.py
tests/fixtures/mock_llm/: Dockerfile  server.py
tests/fixtures/webhook_sink/: webhook_sink.py
tests/integration/: test_docling_real.py  test_eda_advisory_lock.py  test_postgres_concurrency.py  test_reaper_postgres.py
tests/llm/: __init__.py  test_real_claude_extraction.py
tests/unit/: __init__.py  test_bbox_refine_worker.py  test_bbox_refiner.py  test_bbox_validator.py  test_binary_archive.py  test_binary_email.py  test_binary_gotenberg.py  test_binary_image.py  test_binary_normalizer.py  test_binary_pdf_guard.py  test_binary_sniffer.py  test_docling_engine.py  test_document_classifier.py  test_document_splitter.py  test_entity_resolution_transformer.py  test_event_envelopes.py  test_extraction_job_repository.py  test_extraction_repository.py  test_extraction_status_enum.py  test_extraction_worker_retry.py  test_field_validator.py  test_get_extraction_result_handler.py  test_get_job_result_handler.py  test_hybrid_matcher.py  test_job_status_enum.py  test_job_worker_retry.py  test_judge_escalator.py  test_list_extractions_handler.py  test_list_jobs_handler.py  test_llm_matcher.py  test_llm_transformer_provenance.py  test_loader.py  test_multi_transformation.py  test_observability_usage.py  test_pymupdf_word_extractor.py  test_reapers.py  test_request_validator.py  test_standard_validators.py  test_submit_extraction_handler.py  test_submit_job_handler.py  (+9 more)
(+275 files in other folders)
