[project]
name = "flydesk-idp"
version = "0.1.0"
description = "Firefly Desk -- Intelligent Document Processing service. Pure multimodal extraction with bounding boxes, sync + async (queue-backed) APIs, built on pyfly + fireflyframework-agentic."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Firefly Software Solutions Inc" },
]

dependencies = [
    # Firefly Framework runtime (DI, CQRS, EDA, web, observability, resilience,
    # actuator, data-relational, security). Pulled in with the extras we use
    # so a fresh ``uv sync`` is enough to boot the full stack.
    "pyfly[fastapi,observability,security,data-relational,postgresql,eda,redis,client,scheduling,cli]>=26.5.4",

    # GenAI metaframework -- FireflyAgent with multimodal content (BinaryContent/ImageUrl)
    # over pydantic-ai. Pulls in the OpenAI / Anthropic / Bedrock providers via pydantic-ai-slim.
    "fireflyframework-agentic[rest,security,redis]>=26.5.11",

    # Document handling -- pypdf only for cheap page counting; the document
    # bytes themselves are shipped straight to the multimodal LLM (no local
    # rasterisation, no Pillow), so we stay format-agnostic (PDF, PNG, JPEG,
    # WebP, TIFF, DOCX, ...).
    "pypdf>=4.3.0",

    # Pydantic AI models for multimodal/vision LLMs.
    "pydantic-ai-slim[anthropic,openai,bedrock]>=1.56.0",

    # HTTP/Webhook + outbound clients.
    "httpx>=0.28.0",
    "tenacity>=9.0.0",

    # Configuration.
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Persistence stack. asyncpg drives the runtime (async engine); psycopg
    # is the sync sibling used by Alembic for migrations (env.py rewrites
    # ``+asyncpg`` ā†’ ``+psycopg`` so a single DATABASE_URL covers both).
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "aiosqlite>=0.22",
    "alembic>=1.14",
    "redis>=5.2",

    # Structured logging + tracing.
    "structlog>=25.5.0",
]

[project.scripts]
flydesk-idp = "flydesk_idp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "pyright>=1.1",
    "testcontainers[postgres,redis]>=4.0",
    "respx>=0.21",
    "httpx>=0.28",
    "reportlab>=4.2",  # synthesise sample PDFs in fixtures
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Sibling-repo path sources -- mirror what flydesk-agent does so both
# services boot from a fresh local checkout without needing the registry.
pyfly = { path = "../../fireflyframework/fireflyframework-pyfly", editable = true }
fireflyframework-agentic = { path = "../../fireflyframework/fireflyframework-agentic", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/flydesk_idp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires docker compose stack (real Postgres / Redis / mock LLM)",
    "llm: requires a real LLM provider (OPENAI_API_KEY/ANTHROPIC_API_KEY/...). Skipped by default.",
]
addopts = "-v --tb=short -m 'not llm'"

[tool.ruff]
target-version = "py313"
line-length = 110
# CI clones the sibling firefly framework repos into ``./vendor/`` so
# the Dockerfile's BuildKit contexts resolve identically in local
# checkouts and in GitHub Actions. We don't lint third-party code on
# its way through our pipeline -- they have their own ruff config.
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Public DTOs / interface enums map directly onto the JSON wire
# contract we ship to callers (``parentType``, ``fieldGroupName``,
# ``ruleId``, ā€¦). The mixedCase fields and Exception-suffix-less
# identifiers are intentional ā€” renaming them would break the API.
"src/flydesk_idp/interfaces/**" = ["N801", "N811", "N815", "N818"]
# Domain exceptions on the jobs CQRS handlers + the webhook publisher
# follow the framework's exception-naming convention (no ``Error``
# suffix); renaming them would ripple through every controller advice
# mapping.
"src/flydesk_idp/core/services/jobs/**" = ["N818"]
"src/flydesk_idp/core/services/webhook/**" = ["N818"]
# Judge re-binds the public wire-contract field names locally; same
# justification as the interfaces package.
"src/flydesk_idp/core/services/judge/**" = ["N815"]
# field_validator imports stdlib ``UUID`` as ``PyUUID`` to disambiguate
# from the project's own UUID column type without renaming the column.
"src/flydesk_idp/core/services/validation/**" = ["N811"]
# Tests routinely build long inline DTOs; the line-length cap is a
# code-smell signal we don't enforce on test fixtures.
"tests/**" = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src/flydesk_idp"]
exclude = ["tests/**", "**/__pycache__/**", "vendor/**"]

# Two execution-environment overrides silence false positives that come
# from framework-level metaprogramming that pyright can't follow:
#
# * ``web/controllers``: pyfly's ``Body[T]`` / ``Valid[T]`` / ``Header[T]`` /
#   ``PathVar[T]`` are runtime ``Generic[T]`` classes the framework
#   strips at injection time. Statically they look like opaque wrappers
#   around T, so pyright rejects every call site that passes the
#   unwrapped value through. Suppress ``reportArgumentType`` until
#   pyfly publishes proper type stubs (or switches the markers to
#   ``Annotated[T, ā€¦]``).
# * ``core/services/extraction/postprocess``: pydantic v2's
#   ``populate_by_name=True`` lets us construct DTOs with either the
#   Python field name (``fieldName=``) or the alias (``name=``).
#   Pyright tracks the alias only, so it flags every construction
#   that uses the Python name. The runtime accepts both; suppress
#   ``reportCallIssue`` here.

[[tool.pyright.executionEnvironments]]
root = "src/flydesk_idp/web/controllers"
reportArgumentType = "none"

[[tool.pyright.executionEnvironments]]
root = "src/flydesk_idp/core/services/extraction"
reportCallIssue = "none"
