[project]
name = "flydocs"
# CalVer YY.MM.PP -- bumped per release. Note that PEP 440 normalises
# ``26.05.01`` -> ``26.5.1`` in the built wheel filename.
version = "26.5.1"
description = "Pure-multimodal Intelligent Document Processing service: structured fields + bounding boxes, validation, authenticity checks, LLM judge, and a business-rule engine. Sync + queue-backed async APIs over fireflyframework-pyfly and -agentic. Part of Firefly OperationOS, platform-agnostic by design."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Firefly Software Solutions Inc" },
]

dependencies = [
    # Firefly Framework runtime (DI, CQRS, EDA, web, observability, resilience,
    # actuator, data-relational, security). Pulled in with the extras we use
    # so a fresh ``uv sync`` is enough to boot the full stack.
    "pyfly[fastapi,observability,security,data-relational,postgresql,eda,redis,client,scheduling,cli]>=26.5.4",

    # GenAI metaframework -- FireflyAgent with multimodal content (BinaryContent/ImageUrl)
    # over pydantic-ai. Pulls in the OpenAI / Anthropic / Bedrock providers via pydantic-ai-slim.
    "fireflyframework-agentic[rest,security,redis]>=26.5.11",

    # Document handling.
    #
    # ``pypdf`` -- cheap page counting + encrypted-PDF detection in the
    # binary normalizer (raw bytes still ship straight to the multimodal
    # LLM, no local rasterisation for the extraction path).
    #
    # ``Pillow`` + ``pillow-heif`` -- the binary normalizer uses Pillow
    # to canonicalise raster inputs the LLM provider can't natively read
    # (HEIC/HEIF iPhone photos, multi-frame TIFF fax scans, animated GIFs,
    # SVG via cairosvg) into PNG or multi-page PDF.
    #
    # ``cairosvg`` -- vector SVG rasterisation; the providers don't accept
    # SVG so we render to PNG before shipping.
    #
    # ``py7zr`` -- 7-Zip archive expansion (.zip and .tar are stdlib).
    #
    # ``extract-msg`` -- Outlook .msg parsing; .eml is stdlib ``email``.
    #
    # ``pymupdf`` -- bbox refiner reads the embedded text layer of
    # born-digital PDFs at sub-pixel accuracy via ``page.get_text("words")``.
    # MIT-licensed; no JVM, no native subprocess.
    #
    # ``rapidfuzz`` -- bbox refiner's value matcher (Levenshtein over
    # contiguous word / character spans, with NFC normalisation +
    # script-aware tokenisation). Pure C++; no PyTorch dep.
    "pypdf>=4.3.0",
    "Pillow>=11.0",
    "pillow-heif>=0.18",
    "cairosvg>=2.7",
    "py7zr>=0.22",
    "extract-msg>=0.51",
    "pymupdf>=1.24",
    "rapidfuzz>=3.10",

    # OCR engine for image-only PDFs and rasters consumed by the bbox
    # refiner. ``pytesseract`` is a thin wrapper around the ``tesseract``
    # binary; the binary + language packs (``tesseract-ocr-spa``,
    # ``tesseract-ocr-eng``, ...) are installed by the runtime Dockerfile.
    # Multilingual: each language pack is a separate apt package that the
    # operator can add without code changes -- the adapter passes the
    # composed lang string straight to tesseract.
    "pytesseract>=0.3.13",

    # Pydantic AI models for multimodal/vision LLMs.
    "pydantic-ai-slim[anthropic,openai,bedrock]>=1.56.0",

    # HTTP/Webhook + outbound clients.
    "httpx>=0.28.0",
    "tenacity>=9.0.0",

    # Configuration.
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Persistence stack. asyncpg drives the runtime (async engine); psycopg
    # is the sync sibling used by Alembic for migrations (env.py rewrites
    # ``+asyncpg`` → ``+psycopg`` so a single DATABASE_URL covers both).
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "aiosqlite>=0.22",
    "alembic>=1.14",
    "redis>=5.2",

    # Structured logging + tracing.
    "structlog>=25.5.0",
]

[project.scripts]
flydocs = "flydocs.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "pyright>=1.1",
    "testcontainers[postgres,redis]>=4.0",
    "respx>=0.21",
    "httpx>=0.28",
    "reportlab>=4.2",  # synthesise sample PDFs in fixtures
    "python-docx>=1.1",  # synthesise sample DOCX in fixtures
]

# Optional layout-aware OCR engine for the bbox refiner. Drops in as an
# alternative to ``tesseract`` via ``FLYDOCS_BBOX_REFINE_OCR_ENGINE=docling``.
# Pulls PyTorch + Hugging Face models -- gated behind this extra so the
# distroless / slim runtime images don't pay the footprint by default.
docling = [
    "docling>=2.93",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Sibling-repo path sources -- mirror what flydesk-agent does so both
# services boot from a fresh local checkout without needing the registry.
pyfly = { path = "../../fireflyframework/fireflyframework-pyfly", editable = true }
fireflyframework-agentic = { path = "../../fireflyframework/fireflyframework-agentic", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/flydocs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires docker compose stack (real Postgres / Redis / mock LLM)",
    "llm: requires a real LLM provider (OPENAI_API_KEY/ANTHROPIC_API_KEY/...). Skipped by default.",
]
addopts = "-v --tb=short -m 'not llm'"

[tool.ruff]
target-version = "py313"
line-length = 110
# CI clones the sibling firefly framework repos into ``./vendor/`` so
# the Dockerfile's BuildKit contexts resolve identically in local
# checkouts and in GitHub Actions. We don't lint third-party code on
# its way through our pipeline -- they have their own ruff config.
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Public DTOs / interface enums map directly onto the JSON wire
# contract we ship to callers (``parentType``, ``fieldGroupName``,
# ``ruleId``, …). The mixedCase fields and Exception-suffix-less
# identifiers are intentional — renaming them would break the API.
"src/flydocs/interfaces/**" = ["N801", "N811", "N815", "N818"]
# Domain exceptions on the jobs CQRS handlers + the webhook publisher
# follow the framework's exception-naming convention (no ``Error``
# suffix); renaming them would ripple through every controller advice
# mapping.
"src/flydocs/core/services/jobs/**" = ["N818"]
"src/flydocs/core/services/webhook/**" = ["N818"]
# Judge re-binds the public wire-contract field names locally; same
# justification as the interfaces package.
"src/flydocs/core/services/judge/**" = ["N815"]
# field_validator imports stdlib ``UUID`` as ``PyUUID`` to disambiguate
# from the project's own UUID column type without renaming the column.
"src/flydocs/core/services/validation/**" = ["N811"]
# Tests routinely build long inline DTOs; the line-length cap is a
# code-smell signal we don't enforce on test fixtures.
"tests/**" = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src/flydocs"]
exclude = ["tests/**", "**/__pycache__/**", "vendor/**"]

# Two execution-environment overrides silence false positives that come
# from framework-level metaprogramming that pyright can't follow:
#
# * ``web/controllers``: pyfly's ``Body[T]`` / ``Valid[T]`` / ``Header[T]`` /
#   ``PathVar[T]`` are runtime ``Generic[T]`` classes the framework
#   strips at injection time. Statically they look like opaque wrappers
#   around T, so pyright rejects every call site that passes the
#   unwrapped value through. Suppress ``reportArgumentType`` until
#   pyfly publishes proper type stubs (or switches the markers to
#   ``Annotated[T, …]``).
# * ``core/services/extraction/postprocess``: pydantic v2's
#   ``populate_by_name=True`` lets us construct DTOs with either the
#   Python field name (``fieldName=``) or the alias (``name=``).
#   Pyright tracks the alias only, so it flags every construction
#   that uses the Python name. The runtime accepts both; suppress
#   ``reportCallIssue`` here.

[[tool.pyright.executionEnvironments]]
root = "src/flydocs/web/controllers"
reportArgumentType = "none"

[[tool.pyright.executionEnvironments]]
root = "src/flydocs/core/services/extraction"
reportCallIssue = "none"
